--- a/software/Makefile
+++ b/software/Makefile
@@ -5,7 +5,7 @@ AS=arm-none-eabi-as
 OBJCOPY=arm-none-eabi-objcopy
 
 
-OBJS=src/main.o src/startup.o
+OBJS=src/main.o src/startup.o src/uart.o # src/syscall.o
 LDSCRIPT=src/stm32f427.ld
 DEFINES=-DSTM32F427_437xx
 LIBS=
@@ -14,13 +14,19 @@ CMSIS_DeviceInclude=$(CMSIS)/include
 CMSIS_DeviceSystem=$(CMSIS)/src/system_stm32f4xx.o
 CMSIS_LIBS=$(CMSIS)/lib
 OBJS += $(CMSIS_DeviceSystem)
+
+# DRIVERS=StdPeriph_Driver
+# DRIVERS_INCLUDE=$(DRIVERS)/include
+# OBJS += $(DRIVERS)/src/stm32f4xx_usart.o $(DRIVERS)/src/misc.o 
 INCLUDE=include/
 
-CFLAGS=-Wall -Werror -mcpu=cortex-m4 -mthumb $(DEFINES) -I$(INCLUDE) -I$(CMSIS_DeviceInclude)
+CFLAGS=-Wall -Werror -mcpu=cortex-m4 -mthumb $(DEFINES) -I$(INCLUDE) -I$(CMSIS_DeviceInclude) #-I$(DRIVERS_INCLUDE)
+CFLAGS += -ffreestanding -nostdlib
 CXXFLAGS=$(CFLAGS)
 
+
 LDFLAGS=-mthumb -T$(LDSCRIPT) -L$(CMSIS_LIBS) 
-LDFLAGS+=-specs=nosys.specs # Don't use system library
+LDFLAGS+=-specs=nosys.specs
 ASFLAGS=-mthumb
 
 BINARY=main.bin
@@ -42,7 +48,7 @@ all: $(OBJS) $(BINARY)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 %.o: %.c
-	$(CXX) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 %.o: %.s
 	$(AS) $(ASFLAGS) -c $< -o $@
